// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveGameState correct log is calculated based on what the player can see 1`] = `
Array [
  Object {
    "text": "Fury Station is a crowded cesspool today. Just like any other day.
The sound of distant PA announcements echo through the hall, and the chatter in dozens of languages merge into a soft, comforting murmur.
The line at the employment office is long enough that you start daydreaming about better times.",
    "timestamp": 4102441321000,
  },
  Object {
    "text": "Growing up on Earth was nice… at least before the radiation sickness took Mom and Dad.",
    "timestamp": 4102441321001,
  },
  Object {
    "text": "NPC: Buddy. Hey! You’re up.
CLERK LADY: You! Yeah,[short] [guy]. Stop wasting my time and get over here.
You walk over to the dirty desk and sit down on the uncomfortable, creaky stool. The clerk lady has wrinkles that only decades of constant grumpiness can explain. Her raspy voice is almost unintelligible through the speakers.
CLERK LADY: Name.",
    "timestamp": 4102441322000,
  },
  Object {
    "text": "You say your name",
    "timestamp": 4102441322001,
  },
]
`;

exports[`resolveGameState current node is calculated for the current player, not for all players 1`] = `"starter"`;

exports[`resolveGameState resolves an action that gives a global tag as well 1`] = `
Array [
  Object {
    "_partyRef": "party1",
    "_uid": "player1",
    "name": "Player One",
    "tags": Array [
      "BORN ON EARTH",
    ],
  },
  Object {
    "_partyRef": "party1",
    "_uid": "player2",
    "name": "Player Two",
    "tags": Array [],
  },
]
`;

exports[`resolveGameState resolves an action that gives a global tag as well 2`] = `
Array [
  "EARTH DESTROYED",
]
`;

exports[`resolveGameState resolves an action that gives a tag 1`] = `
Array [
  Object {
    "_partyRef": "party1",
    "_uid": "player1",
    "name": "Player One",
    "tags": Array [
      "RAISED BY DIVINE ORDER",
    ],
  },
  Object {
    "_partyRef": "party1",
    "_uid": "player2",
    "name": "Player Two",
    "tags": Array [],
  },
]
`;

exports[`resolveGameState resolves an action that gives a tag 2`] = `"starter-2"`;

exports[`resolveGameState returns the base game state 1`] = `
Object {
  "characters": Array [
    Object {
      "_partyRef": "party1",
      "_uid": "player1",
      "name": "Player One",
      "tags": Array [],
    },
    Object {
      "_partyRef": "party1",
      "_uid": "player2",
      "name": "Player Two",
      "tags": Array [],
    },
  ],
  "currentNode": Object {
    "blocker": false,
    "id": "starter",
    "inGameTimestamp": "2100-01-01 00:00:01",
    "options": Array [
      Object {
        "conditions": Array [],
        "globalConditions": Array [],
        "id": "1",
        "resultingAction": Object {
          "effects": Object {
            "gainTags": Array [
              Object {
                "tag": "BORN ON EARTH",
                "target": "SELF",
              },
              Object {
                "tag": "EARTH DESTROYED",
                "target": "GLOBAL",
              },
            ],
            "loseTags": Array [],
          },
          "id": "1",
          "targetNode": "starter-2",
        },
        "text": "Growing up on Earth was nice… at least before the radiation sickness took Mom and Dad.",
      },
      Object {
        "conditions": Array [],
        "globalConditions": Array [],
        "id": "2",
        "resultingAction": Object {
          "effects": Object {
            "gainTags": Array [
              Object {
                "tag": "RAISED BY DIVINE ORDER",
                "target": "SELF",
              },
            ],
            "loseTags": Array [],
          },
          "id": "2",
          "targetNode": "starter-2",
        },
        "text": "It was fun living here on Fury Station when I was a kid. The Divine Order was strict, but at least they kept the place tidy and safe.",
      },
      Object {
        "conditions": Array [],
        "globalConditions": Array [],
        "id": "3",
        "resultingAction": Object {
          "effects": Object {
            "gainTags": Array [
              Object {
                "tag": "BORN ON A SHIP",
                "target": "SELF",
              },
            ],
            "loseTags": Array [],
          },
          "id": "3",
          "targetNode": "starter-2",
        },
        "text": "I’m glad I was born on a ship. Back then, we were free, the solar wind at our backs.",
      },
    ],
    "text": "Fury Station is a crowded cesspool today. Just like any other day.
The sound of distant PA announcements echo through the hall, and the chatter in dozens of languages merge into a soft, comforting murmur.
The line at the employment office is long enough that you start daydreaming about better times.",
  },
  "globalTags": Array [],
  "log": Array [],
  "player": Object {
    "_partyRef": "party1",
    "_uid": "player1",
    "name": "Player One",
    "tags": Array [],
  },
}
`;
